# Loomersidian

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
loomersidian/: __init__.py  cli.py  dedupe.py  enrichment.py  frames.py  generator.py  timeline.py  transcript.py
scripts/: bootstrap.sh  process-inbox.sh
tests/: __init__.py  conftest.py  test_cli.py  test_dedupe.py  test_enrichment.py  test_frames.py  test_generator.py  test_timeline.py  test_transcript.py
tests/fixtures/: sample.transcript
